Apply backend fixes from moneymanager-fixed zip